@@ -414,6 +414,9 @@ Trunk (unreleased changes)
     HADOOP-5696. Change org.apache.hadoop.examples.Sort to use new 
     mapreduce api. (Amareshwari Sriramadasu via sharad)
 
+    HADOOP-5784. Makes the number of heartbeats that should arrive a second
+    at the JobTracker configurable. (Amareshwari Sriramadasu via ddas)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
